code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

01-Nov-2010 Jean-Marie Simonet
 # [#22658] Flash uploader always shows "Images (...)" text in file selection popup. Thanks Dennis.

01-Nov-2010 Christophe Demko
 # [#21446] Use local storage for the font size changer in the Beez templates (Rouven Weßling)

31-Oct-2010 Christophe Demko
 # [#23073] Module position selection popup does not display administrator positions

31-Oct-2010 Jean-Marie Simonet
 # [#23076] Plugin Edits not checking back in in Bluestork. Thanks Andrea.
 # [#23066] Single edit fix issues in Hathor. Thanks Andrea
 # [#23080] Hathor menu batch copy strings. Thanks Bill.
 
30-Oct-2010 Mark Dexter
# [#21529] Aliases for _adminmenu items [sample data/joomla.sql]
# [#23046] Delete unused vcard files
# Clean out extraneous characters in sample data

30-Oct-2010 Jean-Marie Simonet
 # [#23058] Debug shows language debug info if "Debug Language" is disabled. Thanks Dennis.
 + [#22940] missing images in beez or css wrong. Thanks Bill and Christophe.
 # [#23063] Can't access plugins in the backend. Thanks Rouven and Louis.
 $ Correcting some xx-XX ini files.
 # [#23074] JLIB_HTML_BEHAVIOR_PREV_YEAR_HOLD_FOR_MENU. Thanks Bill.

29-Oct-2010 Mark Dexter
# Recommitting [#22178] When 'No Editor' is selected for user, HTML still re-formats when a file is saved (with joomla.sql fix)
# Reverting issue [#22178] When 'No Editor' is selected for user, HTML still re-formats when a file is saved (dani shap, Ian MacLennan, Hannes Papenberg, Elin Waring). 

29-Oct-2010 Jean-Marie Simonet
 $ Updatings templates language folder sys.ini files for modules positions.
 
29-Oct-2010 Andrew Eddie
 # Fixed issue [#21260] ACL Permissions for Authors to Edit Own Content Items Missing (James Brice, Elin Waring, Michael Babker).
 # Fixed issue [#22389] JFormFieldCategory et al not selecting default from list view (Boris Baddenoff, Mathavan Jeyadev).