@@ -32,6 +32,7 @@ $ -> Language fix or change
 
 01-Nov-2010 Christophe Demko
  # [#21446] Use local storage for the font size changer in the Beez templates (Rouven Weßling)
+ # [#22003] Missing onXXXBeforeSave event in com_categories
 
 31-Oct-2010 Christophe Demko
  # [#23073] Module position selection popup does not display administrator positions
